# swagger.json
@@ -5,13 +5,13 @@
     "description": "Recipe API for Team Project ",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "https://recipesapi-2dkf.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
-    "/api-docs": {
+    "/": {
       "get": {
         "description": "",
         "responses": {
